Social media buttons and fixed some broken css

--- a/style.css
+++ b/style.css
@@ -79,6 +79,7 @@ img {
 
 .header {
     background-color: #161B22;
+    border: 1px solid #30363D;
     color: #FFFFFF;
     padding: 10px;
     text-align: left;
@@ -92,12 +93,11 @@ img {
 .header img {
     width: 110px;
     height: 26px;
-    margin-bottom: -4px;
 }
 
 .btn {
     color: #FFFFFF;
-    padding: 3px 12px;
+    padding: 5px 12px;
     font-size: 12px;
     line-height: 20px;
     text-decoration: none;
@@ -110,7 +110,7 @@ img {
 .btn:hover {
     text-decoration: none;
     background-color: #30363D;
-    border: #5c636d 1px solid;
+    border: #767e8a 1px solid;
     transition: all 0.1s ease-in-out;
 }
 
@@ -132,7 +132,6 @@ img {
     margin-left: 2px;
     color: inherit;
     text-shadow: none !important;
-    vertical-align: top;
     border: none;
 }
 
@@ -213,7 +212,7 @@ p {
     padding: 10px;
     text-align: left;
     margin-top: 8px;
-    bottom: 8px;
+    bottom: -8px;
     margin-left: 8px;
     margin-right: 8px;
     border-radius: 8px 8px 0 0;
@@ -221,6 +220,7 @@ p {
     width: -moz-available; /* goddammit mozilla */
     height: fit-content;
     text-align: center;
+    position: absolute;
 }
 
 .about {
@@ -338,4 +338,20 @@ button {
     font-size: 15px;
     font-weight: bold;
     text-decoration: none;
+}
+
+.a-icon {
+    width: 15px;
+    height: 15px;
+    color: #ffffff !important;
+}
+
+.a-icon:hover {
+    color: #a200ff !important;
+    text-decoration: none !important;
+}
+
+.social-buttons {
+    display: inline-block;
+    height: 100%;
 }
